feat: patch participant
